regression/fail/sig.1.sml
signature S =
   sig
      datatype t = A
      and u = A
   end
